# RentTracker

./: .gitignore  .replit  README.md  WEB_FIX_GUIDE.md  main.py  package-lock.json  package.json  pyproject.toml  replit.md  run.py  web_app.py
attached_assets/: tz_lang.md
config/: default_config.yaml  parser_rules.yaml
docs/: API_REFERENCE_RU.md  INSTALLATION_RU.md  INTERACTIVE_SHELL_RU.md  README_RU.md  TROUBLESHOOTING_RU.md  USER_GUIDE_RU.md  problematic_situations_handling.md  project_architecture.md  tz_extended.md
src/application/dto/: payment_request.py  report_request.py  report_response.py
src/application/use_cases/: generate_report.py  process_payments.py
src/core/: exceptions.py
src/core/models/: garage.py  payment.py  payment_period.py  report.py  transaction.py
src/core/services/: date_calculator.py  payment_matcher.py  status_determiner.py
src/infrastructure/config/: config_manager.py  settings.py
src/infrastructure/file_handlers/: excel_reader.py  excel_writer.py
src/infrastructure/localization/: i18n.py  messages_en.json  messages_ru.json
src/interfaces/cli/: cli_app.py
src/interfaces/web/: app.py
src/parsers/base/: parser_factory.py  parser_interface.py
src/parsers/file_parsers/: excel_parser.py  sberbank_parser.py
src/utils/: date_utils.py  logging_config.py  validation.py
tests/: conftest.py  test_enhanced_matching.py  test_payment_period.py
tests/fixtures/: mock_data.py
tests/integration/: test_cli_integration.py  test_full_payment_flow.py
tests/unit/application/: test_process_payments_use_case.py
(+15 files in other folders)
